--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon src/main.js"
+    "start": "node src/main.js",
+    "dev": "npx nodemon src/main.js -e js,ejs,css"
   },
   "author": "Enes Karakaş",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": "16.18.0"
   }
 }
