--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/main.js",
     "dev": "npx nodemon src/main.js -e js,ejs,css"
@@ -10,13 +11,16 @@
   "author": "Enes Karakaş",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.2",
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": "16.18.0"
