--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/main.js",
+    "start": "node dist/src/main.js",
     "dev": "npx nodemon src/main.js -e js,ejs,css"
   },
   "author": "Enes Karakaş",
